update orderTransactionManager